<resources>
    <string name="app_name">AppVenton</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtBotonHola">Iniciar Sesión</string>
    <string name="txtEmail">Email</string>
    <string name="txtContra">Contraseña</string>
    <!-- Esta descripción me la pidió el ImageView  en su propiedad contentDescription "La puse con la finalidad de que no marcara Warnings" -->
    <string name="txtDescripcion">Inicio</string>
    <!--texto para el boton olvidaste tu contraseña-->
    <string name="txtOlvidasteContrasena">¿Olvidaste tu contraseña?</string>
    <!--texto para el boton crear cuenta-->
    <string name="txtCrearCuenta">Registrarse</string>
    <string name="txtSiguiente">Siguiente</string>
    <!-- Texto dialogos -->
    <string name="txtOlvidaContrasenaTittle">Olvidé contraseña</string>
    <string name="txtOlvidaContrasena">Contacta al encargado para hacer tu registro.</string>
    <string name="txtFotoPerfilUsuario">Buscar Foto de perfil</string>
    <string name="txtFotoPerfilAutos">Buscar Foto de auto</string>
    <string name="txtNumeroControl">Número de control</string>
    <!-- etiquetas para el registro de usuario-->
    <string name="txtNombre">Nombre</string>
    <string name="txtApellidoP">Apellidos</string>
    <string name="txtEdad">Edad</string>
    <string name="txtMasculino">Masculino</string>
    <string name="txtFemenino">Femenino</string>
    <string name="txtTelCel">Celular</string>
    <string name="txtGen">Género</string>
    <string name="txtCarrera">Carrera</string>

    <!-- textos de los botones de tipo de uruario-->

    <string name="txtConductor">Prestador de servicios</string>
    <string name="txtPasajero">Pasajero</string>

    <string name="txtPlacas">Placas</string>
    <string name="txtVigencia">Vigencia de licencia</string>
    <string name="txtNPasajeros">Cantidad de pasajeros</string>

    <string name="txtConfigurar">Configuración</string>
    <string name="txtAyuda">Ayuda</string>
    <string name="txtQuejasugerencia">Quejas y sugerencias</string>

    <string name="txtEnviar">Enviar</string>
    <string name="txtQueja">Mensaje…</string>

    <string name="txtMenuDescription">menu</string>
    <string name="txtCerrarSesion">Cerrar Sesión</string>

    <string name="txtAceptar">Aceptar</string>
    <string name="txtTituloEjemplo">Titulo Ejemplo</string>
    <string name="txtTextoEjemplo">Texto Ejemplo, Lorem ipsu dolor.</string>
    <string name="cambiar_foto_perfil">Cambiar foto perfil</string>
    <string name="tel_fono">Teléfono</string>
    <string name="queja">Queja</string>
    <string name="sugerencia">Sugerencia</string>
    <string name="formulario">Formulario</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
    <string name="regresar_al_mapa">Regresar al mapa</string>
    <string name="txtRecuperaci_n_de_credenciales">Recuperación de credenciales</string>
    <string name="txtFormulario">Formulario</string>
    <string name="txtRecuperar_cuenta">Recuperar cuenta</string>
    <string name="txtaAppventon">AppVenton</string>
    <string name="txtaAcerca_de">Acerca de</string>
    <string name="txtDesarrollado_por">Desarrollado por</string>
    <string name="txtT_rminos_de_uso">Términos de uso</string>
    <string name="txtPol_ticas_de_privacidad">Políticas de privacidad</string>
    <string name="txt_1">Esta aplicación ha sido desarrollada por alumnos y docentes del Instituto Tecnológico Superior de Uruapan de la carrera de Ingeniería en Sistemas Computacionales.\n\n\n\n</string>
    <string name="txt_2">Profesores:\n  Dr. Roberto Loaeza Valerio \n Profra. Irma Gutiérrez Miranda\n\n\n</string>
    <string name="txt_3">Alumnos:\n  Vicente Aguilera Pérez \n Víctor Alfonso Pérez Espino\n\n\n\n</string>
    <string name="txt2020_appventon">©2020 AppVenton</string>


    <!-- mapbox -->

    <string name="access_token">pk.eyJ1IjoiYXBwdmVudG9uIiwiYSI6ImNrNHQybGRnZTAyb3kzam1uNm1xNjh1dWEifQ.CWKwjqeR_KL9zMHpdXTTGQ</string>
    <string name="datos_generales">Datos Generales</string>
    <string name="datos_servicio">Datos del Servicio</string>
    <string name="auto">Datos de Auto</string>
    <string name="recompensas">Recompensas</string>
    <string name="_3_estrellas_250">3 estrellas $250</string>
    <string name="_5_estrellas_500">5 estrellas $500</string>
    <string name="_6_estrellas_condonaci_n_30">6 estrellas Condonación 30%</string>
    <string name="los_valores_estan_sujetos_a_modificaciones_de_acuerdo_a_appventon_recompensas_no_acumulables">*Los valores estan sujetos a modificaciones de acuerdo a AppVenton. \n*Recompensas no acumulables.</string>
    <string name="viajes">Viajes</string>
    <string name="agregar_viaje_hoy">Agregar Viaje Hoy</string>
    <string name="comentario_viaje_hoy">Algún comentario, aviso, información de tiempo, que quiera compartir con sus compañeros pasajeros.</string>
    <string name="seleccionar_lugar">Seleccionar Lugar</string>
    <string name="seleccionar_chofer">Seleccionar</string>
    <string name="lugar_informaci_n">Lugar Información</string>
    <string name="txtusuarios">Usuarios</string>
    <string name="txt_cancelar_viaje">Cancelar Viaje</string>


</resources>
