<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorBotones"
    android:layout_weight="10"

    android:padding="16dp">

    <TextView
        android:id="@+id/textView_tituloEror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/txtTituloEjemplo"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        android:layout_weight="3"
        android:layout_marginBottom="8dp"

         />
    <TextView
        android:id="@+id/textView_mensajeError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:textSize="18sp"
        android:text="@string/txtTextoEjemplo"
        />

    <Button
        android:id="@+id/btn_aceptar_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtAceptar"
        android:layout_gravity="end"
        android:background="@color/colorBackBotones"
        android:textColor="@color/colorBotones"
        />


</LinearLayout>