<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:background="@drawable/citybackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/txtDescripcion"
            android:src="@drawable/iconwhite" />

        <EditText
            android:id="@+id/TextUsuario"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorBotones"
            android:drawableEnd="@drawable/email"
            android:ems="10"
            android:hint="@string/txtUsuario"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorBotones"
            android:textColorHint="@color/colorBotones"
            android:textSize="20sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/TextContrasena"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorBotones"
            android:drawableEnd="@drawable/lock"
            android:ems="10"
            android:hint="@string/txtContra"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorBotones"
            android:textColorHint="@color/colorBotones"
            android:textSize="20sp"
            tools:targetApi="o" />

        <Button
            android:id="@+id/botonIniciar"
            android:layout_width="119dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:background="@color/colorBackBotones"
            android:text="@string/txtBotonHola"
            android:textColor="@color/colorBotones" />

    </LinearLayout>

    <Button
        android:id="@+id/botonOlvidarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:text="@string/txtOlvidasteContrasena"
        android:textColor="@color/colorBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="81dp"
        android:background="#00FFFFFF"
        android:text="@string/txtCrearCuenta"
        android:textColor="@color/colorBotones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonOlvidarContraseña"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>