<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparente"
    tools:context=".menu.menu"

    >


    <TableLayout
        android:id="@+id/tablamenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBotones"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:background="@color/colorBackBotones2"
            android:weightSum="4">


            <ImageView
                android:id="@+id/image_view_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:contentDescription="@string/txtDescripcion"
                android:src="@drawable/iconwhite"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/text_view_nombre"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_weight="2.75"
                android:text="@string/txtNombre"
                android:textColor="@color/colorBotones"
                android:textSize="20sp" />


        </TableRow>
        <!--s
        <Button
            android:id="@+id/button_configurar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtConfigurar"
            android:background="@color/colorBotones"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="129dp"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/button_ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAyuda"
            android:background="@color/colorBotones"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="129dp"
            android:textAlignment="textStart"/>
            -->

        <Button
            android:id="@+id/button_quejas_sugerencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtQuejasugerencia"
            android:background="@color/colorBotones"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="129dp"
            android:textAlignment="textStart"/>
        <Button
            android:id="@+id/button_cerrar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCerrarSesion"
            android:textAlignment="textStart"
            android:background="@color/colorBotones"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="263dp" />



    </TableLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
