<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperacionPassword"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackBotones"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/colorBotones2"
        android:text="Recuperación de credenciales"
        android:textColor="@color/colorBotones"
        android:textSize="25sp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20sp"
        android:text="Formulario"
        android:textColor="@color/colorBotones2"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/colorBotones2"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBotones2"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/colorBotones2"
        android:textColorLink="@android:color/black"
        tools:layout_editor_absoluteY="62dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_text_num_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/colorBotones2"
        android:ems="10"
        android:hint="@string/txtNumeroControl"
        android:maxLength="8"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorBotones2"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/colorBotones2"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        tools:targetApi="o" />
    <EditText
        android:id="@+id/edit_text_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/colorBotones2"
        android:ems="10"
        android:hint="@string/txtTelCel"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/colorBotones2"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/colorBotones2"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/spinner_selecCarrera"
        style="@android:style/Widget.Material.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorBotones2"
        android:padding="0dp"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/spinner_item_values_2" />
    <RadioGroup
        android:id="@+id/radioGroup_peticion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButton_prestador_servicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/txtConductor" />

        <RadioButton
            android:id="@+id/radioButton_pasajero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPasajero" />
    </RadioGroup>
    <Button
        android:id="@+id/button_recuperar_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:background="@color/colorBackBotones2"
        android:text="Recuperar cuenta"
        android:textColor="@color/colorBotones"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="129dp" />




</androidx.appcompat.widget.LinearLayoutCompat>