<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.Configurar_usuarios"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackBotones"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txtConfigurar"
            android:textColor="@color/colorBotones"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/colorBotones2"
             />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/colorBackBotones2"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="Datos Generales"
                                android:layout_gravity="center"
                                android:textColor="@color/colorBotones"
                                android:textSize="20sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/image_view_persona"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/transparente"
                    android:contentDescription="@string/txtDescripcion"
                    android:padding="5dp"/>
        <EditText
            android:id="@+id/edit_text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorBotones2"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="@color/colorBotones2"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/colorBotones2"
            android:textColorLink="@android:color/black"

            tools:layout_editor_absoluteY="62dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edit_text_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorBotones2"
            android:ems="10"
            android:hint="@string/txtApellidoP"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="@color/colorBotones2"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/colorBotones2"
            android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/edit_text_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorBotones2"
            android:ems="10"
            android:hint="@string/txtTelCel"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/colorBotones2"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/colorBotones2"
            android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
            tools:targetApi="o" />
        <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:background="@color/colorBackBotones"
        android:text="@string/guardar_cambios"
        android:textColor="@color/colorBotones"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/colorBackBotones2"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:text="Datos Extra"
                android:textColor="@color/colorBotones"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

